Fix game notes collapse/show button

--- a/css/overlay.css
+++ b/css/overlay.css
@@ -5605,7 +5605,7 @@ svg._1jEeo7zqm7N8CC0LXx29Py {
   -webkit-mask-image: var(--zehn-icon-add) !important;
 }
 
-._3LLH_F43MTu6UtG4Z3kudv {
+._3LLH_F43MTu6UtG4Z3kudv, ._1cWmu5TUWFAVHlv1EVaF8e {
   top: 0 !important;
   left: 0 !important;
   font-size: var(--zehn-size-14) !important;
@@ -5617,17 +5617,18 @@ svg._1jEeo7zqm7N8CC0LXx29Py {
   margin: 0 !important;
   height: 32px !important;
   width: 48px !important;
+  transition: none !important;
 }
 
-._3LLH_F43MTu6UtG4Z3kudv:hover {
+._3LLH_F43MTu6UtG4Z3kudv:hover, ._1cWmu5TUWFAVHlv1EVaF8e:hover {
   background-color: var(--zehn-color-button-client-background-hover) !important;
 }
 
-._3LLH_F43MTu6UtG4Z3kudv:active {
+._3LLH_F43MTu6UtG4Z3kudv:active, ._1cWmu5TUWFAVHlv1EVaF8e:active {
   background-color: var(--zehn-color-button-client-background-active) !important;
 }
 
-._3LLH_F43MTu6UtG4Z3kudv svg {
+._3LLH_F43MTu6UtG4Z3kudv svg, ._1cWmu5TUWFAVHlv1EVaF8e svg {
   width: 48px !important;
   height: 32px !important;
   margin: 0 !important;
@@ -5637,15 +5638,15 @@ svg._1jEeo7zqm7N8CC0LXx29Py {
   mask-size: 16px !important;
 }
 
-._3LLH_F43MTu6UtG4Z3kudv svg path {
+._3LLH_F43MTu6UtG4Z3kudv svg path, ._1cWmu5TUWFAVHlv1EVaF8e svg path {
   fill: transparent !important;
 }
 
-._3LLH_F43MTu6UtG4Z3kudv svg[direction="left"] {
+._3LLH_F43MTu6UtG4Z3kudv svg[direction="left"], ._1cWmu5TUWFAVHlv1EVaF8e svg[direction="left"] {
   -webkit-mask-image: var(--zehn-icon-chevron-left) !important;
 }
 
-._3LLH_F43MTu6UtG4Z3kudv svg[direction="right"] {
+._3LLH_F43MTu6UtG4Z3kudv svg[direction="right"], ._1cWmu5TUWFAVHlv1EVaF8e svg[direction="right"] {
   -webkit-mask-image: var(--zehn-icon-chevron-right) !important;
 }
 
